--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -58,5 +58,7 @@ button.submit {
   border: var(--mustard);
 }
 p.exampletext {
-  color: var(--gray)
+  margin-top: .5rem;
+  margin-bottom: .5rem !important;
+  color: var(--gray);
 }
