--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -16,10 +16,26 @@
     </div>
 
     {{! Desktop View Nav   }}
-    <div class="hide-md">
-      <a href="/" class="text-light">HOME</a>
-      <a href="/dashboard" class="text-light">DASHBOARD</a>
-      <a href="/login" class="text-light">LOGIN</a>
+    <div class="hide-md desktop-navigation-list">
+      <span><img
+          src="./icons/home.svg"
+          alt="home icon"
+          height="20"
+          width="20"
+        />
+        <a href="/" class="text-light">HOME</a></span>
+      <span><img
+          src="./icons/dashboard.svg"
+          alt="home icon"
+          height="20"
+          width="20"
+        /><a href="/dashboard" class="text-light">DASHBOARD</a></span>
+      <span><img
+          src="./icons/logout.svg"
+          alt="home icon"
+          height="20"
+          width="20"
+        /><a href="/login" class="text-light">LOGIN</a></span>
     </div>
   </nav>
 </header>
