--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -1,6 +1,9 @@
 {{> alert}}
-<div class="form-group">
-  <h2>Login</h2>
+<div class="columns">
+  <div class="column col-md-12 col-6 login-card">
+<div class="card form-group">
+  <div class="card-header">
+  <div class="card-title h5">Login</div>
   <form action="./login" method="POST">
     <label class="form-label" for="input-example-1">Username:</label>
     <input class="form-input" type="text" id="input-example-1" name="email"/>
@@ -9,7 +12,9 @@
     <button class="btn" type="submit">Login</button>
   </form>
 </div>
-<div>
+<div class="card-footer">
   <h3>New to LaborHub? Click to register!</h3>
   <button class="btn btn-primary"><a href="/register">Register Here</a></button>
+</div>
+</div>
 </div>
