--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -3,18 +3,20 @@
   <div class="column col-md-12 col-6 login-card">
 <div class="card form-group">
   <div class="card-header">
-  <div class="card-title h5">Login</div>
+  <div class="card-title h4">Login Below</div>
   <form action="./login" method="POST">
     <label class="form-label" for="input-example-1">Username:</label>
     <input class="form-input" type="text" id="input-example-1" name="email"/>
     <label class="form-label" for="input-example-1">Password:</label>
     <input class="form-input" type="text" id="input-example-1" name="password"/>
-    <button class="btn" type="submit">Login</button>
+    <button class="btn submit" type="submit">Login</button>
   </form>
 </div>
 <div class="card-footer">
-  <h3>New to LaborHub? Click to register!</h3>
-  <button class="btn btn-primary"><a href="/register">Register Here</a></button>
+  <h5>New to LaborHub? Click to register!</h5>
+  <a href="/register">
+    <button class="btn register">Register Here</button>
+  </a>
 </div>
 </div>
 </div>
