edited cards for login and contact fields

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -17,6 +17,10 @@
                         <!--usr_name-->
                         <label class="form-label form-inline" for="usr_name">Username:</label>
                         <input class="form-input form-inline" type="text" id="usr_name" name="usr_name" />
+                        <!--email-->
+                        <label class="form-label form-inline" for="email">Login Email for your Account:</label>
+                        <input class="form-input" type="email" id="email" name="email"
+                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,14}$" />
                         <!--password-->
                         <label class="form-label form-inline" for="password">Password:</label>
                         <input class="form-input" type="password" id="password" name="password"
@@ -44,9 +48,9 @@
                         <!--last_name-->
                         <label class="form-label form-inline" for="last_name">Last name:</label>
                         <input class="form-input" type="text" id="last_name" name="last_name" />
-                        <!--email-->
-                        <label class="form-label form-inline" for="email">Email:</label>
-                        <input class="form-input" type="email" id="email" name="email" placeholder="Type email here"
+                         <!--email-->
+                        <label class="form-label form-inline" for="email">Preferred Contact Email:</label>
+                        <input class="form-input" type="email" id="preferred-email" name="preferred-email"
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,14}$" />
                         <!--personal phone-->
                         <label class="form-label form-inline" for="personal_phone">Personal phone
