capitalized the first letter of all input labels

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -18,7 +18,7 @@
                         <label class="form-label form-inline" for="usr_name">Username:</label>
                         <input class="form-input form-inline" type="text" id="usr_name" name="usr_name" />
                         <!--email-->
-                        <label class="form-label form-inline" for="email">Login Email for your Account:</label>
+                        <label class="form-label form-inline" for="email">Login Email for Your Account:</label>
                         <input class="form-input" type="email" id="email" name="email"
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,14}$" />
                         <!--password-->
@@ -43,21 +43,20 @@
                 <div class="accordion-body"> <!--ACCORDION BODY START-->
                     <div class="card-body"> <!--CARD BODY START-->
                         <!--first_name-->
-                        <label class="form-label form-inline" for="first_name">First name:</label>
+                        <label class="form-label form-inline" for="first_name">First Name:</label>
                         <input class="form-input" type="text" id="first_name" name="first_name" />
                         <!--last_name-->
-                        <label class="form-label form-inline" for="last_name">Last name:</label>
+                        <label class="form-label form-inline" for="last_name">Last Name:</label>
                         <input class="form-input" type="text" id="last_name" name="last_name" />
                          <!--email-->
                         <label class="form-label form-inline" for="email">Preferred Contact Email:</label>
-                        <input class="form-input" type="email" id="preferred-email" name="preferred-email"
+                        <input class="form-input" type="email" id="preferred-email" name="preferred-email" placeholder="Can be the Same or Different Email from Your Login Email"
                             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,14}$" />
                         <!--personal phone-->
-                        <label class="form-label form-inline" for="personal_phone">Personal phone
-                            number:</label>
+                        <label class="form-label form-inline" for="personal_phone">Personal Phone Number:</label>
                         <input class="form-input" type="tel" id="personal_phone" name="personal_phone" />
                         <!--address 1--> <!--address 2-->
-                        <label class="form-label form-inline" for="address1">Home address:</label>
+                        <label class="form-label form-inline" for="address1">Home Address:</label>
                         <input class="form-input" type="text" id="address1" name="address1"
                             placeholder="123 Main St...">
                         <input class="form-input" type="text" id="address2" name="address2"
@@ -66,8 +65,8 @@
                         <label class="form-label form-inline" for="city">City:</label>
                         <input class="form-input" type="text" id="city" name="city" placeholder="Atlanta">
                         <!--state-->
-                        <label class="form-label form-inline" for="state">Select U.S. state or territory from the
-                            list:</label>
+                        <label class="form-label form-inline" for="state">Select U.S. State or Territory from the
+                            List:</label>
                         <select class="form-select" id="state" name="state">
                             <option>Choose an option</option>
                             {{#each statesArr as | state |}}
@@ -126,7 +125,7 @@
                         </label>
                         <label class="form-radio">
                             <input type="radio" id="sex" name="sex">
-                            <i class="form-icon"></i> Prefer to not identify
+                            <i class="form-icon"></i> Prefer to Not Identify
                         </label>
                         <!--sexual_orientation-->
                         <p class="exampletext">Sexual Orientation:</p>
@@ -160,7 +159,7 @@
                         </label>
                         <label class="form-radio">
                             <input type="radio" id="sexual_orientation" name="sexual_orientation">
-                            <i class="form-icon"></i> Prefer to not identify
+                            <i class="form-icon"></i> Prefer to Not Identify
                         </label>
                         <!--ethnicity-->
                         <p class="exampletext">Ethnicity (Please select all that apply):</p>
@@ -186,7 +185,7 @@
                         </label>
                         <label class="form-checkbox">
                             <input type="checkbox" id="ethnicity" name="ethnicity">
-                            <i class="form-icon"></i> White
+                            <i class="form-icon"></i> White or Caucasian
                         </label>
                         <label class="form-checkbox">
                             <input type="checkbox" id="ethnicity" name="ethnicity">
@@ -219,19 +218,19 @@
                         <label class="form-label form-inline" for="title">Title:</label>
                         <input class="form-input" type="text" id="title" name="title" />
                         <!--work phone-->
-                        <label class="form-label form-inline" for="work_phone">Work phone number:</label>
+                        <label class="form-label form-inline" for="work_phone">Work Phone Number:</label>
                         <input class="form-input" type="tel" id="work_phone" name="work_phone" />
                         <!--work phone ext-->
-                        <label class="form-label form-inline" for="work_phoneext">Work phone
-                            extension:</label>
+                        <label class="form-label form-inline" for="work_phoneext">Work Phone
+                            Extension:</label>
                         <input class="form-input" type="number" id="work_phoneext" name="work_phoneext"
                             placeholder="0000" />
                         <!--base rate-->
-                        <label class="form-label form-inline" for="base_rate">Base rate: </label>
+                        <label class="form-label form-inline" for="base_rate">Base Rate: </label>
                         <p class="exampletext">Example: Write "23" instead of "$23/hour"</p>
                         <input class="form-input" type="number" id="base_rate" name="base_rate" />
                         <!--annual salary-->
-                        <label class="form-label form-inline" for="annual_salary">Annual salary: </label>
+                        <label class="form-label form-inline" for="annual_salary">Annual Salary: </label>
                         <p class="exampletext">Example: Write "40000" instead of "$40,000/year"</p>
                         <input class="form-input" type="number" id="annual_salary" name="annual_salary" />
                     </div> <!--CARD BODY END-->
