--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -5,10 +5,10 @@
   <div class="card-header">
   <div class="card-title h4">Login Below</div>
   <form action="./login" method="POST">
-    <label class="form-label" for="input-example-1">Username:</label>
-    <input class="form-input" type="text" id="input-example-1" name="email"/>
-    <label class="form-label" for="input-example-1">Password:</label>
-    <input class="form-input" type="text" id="input-example-1" name="password"/>
+    <label class="form-label" for="email">Email:</label>
+    <input class="form-input" type="text" id="email" name="email"/>
+    <label class="form-label" for="password">Password:</label>
+    <input class="form-input" type="text" id="password" name="password"/>
     <button class="btn submit" type="submit">Login</button>
   </form>
 </div>
