--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -13,7 +13,7 @@
     font-family: 'Roboto', Tahoma, Verdana, sans-serif;
     background-color: var(--light);
     color: var(--dark) !important;
-    margin: 1rem !important;
+    /* margin: 1rem !important; */
   }
 
 /* NAVBAR */
@@ -33,8 +33,14 @@
 .desktop-navigation-list span{
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   gap:0.3rem;
+}
+.site-header {
+  display: flex;
+  justify-content: baseline;
+  align-self: center;
+  margin: 0;
 }
 
 /* CARDS */
@@ -42,7 +48,8 @@
   box-shadow: 0 0.25rem 1rem rgba(48,55,66,.15)
 }
 
-.dashboard-content .column {
+
+.dashboard-content, .dashboard-content .column {
   padding: 0.4rem;
 }
 
