--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -8,7 +8,7 @@
     <label class="form-label" for="email">Email:</label>
     <input class="form-input" type="text" id="email" name="email"/>
     <label class="form-label" for="password">Password:</label>
-    <input class="form-input" type="text" id="password" name="password"/>
+    <input class="form-input" type="password" id="password" name="password"/>
     <button class="btn submit" type="submit">Login</button>
   </form>
 </div>
