LOGIN SUBMIT: linked /dashboard. REGISTER SUBMIT: linked /login

--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -9,7 +9,9 @@
     <input class="form-input" type="text" id="email" name="email"/>
     <label class="form-label" for="password">Password:</label>
     <input class="form-input" type="password" id="password" name="password"/>
-    <button class="btn submit" type="submit">Login</button>
+    <a href="/dashboard">
+      <button class="btn submit" type="submit">Login</button>
+    </a>
   </form>
 </div>
 <div class="card-footer">
