--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -239,7 +239,9 @@
         </div><!--CARD END-->
 
         <!--SUBMIT BUTTON-->
-        <button class="submit btn">Submit Registration</button>
+        <a href="/login">
+            <button class="submit btn">Submit Registration</button>
+        </a>
 
 </div>
 </form>
