made vertical columns for login page. added margins to the login form.

--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -53,10 +53,16 @@
   padding: 0.4rem;
 }
 
-/* login card */
-.login-card{
-margin-inline:auto;
+/* LOGIN CARD */
+.login-card {
+  margin-inline:auto;
 }
+
+.loginform {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 /* LINKS */
 a {
     text-decoration: none;
