commented out username feild since it is unnecessary

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -2,7 +2,7 @@
     <h2>Register below:</h2>
     <form action="/register" method="POST">
 
-        <!--USERNAME AND PASSWORD-->
+        <!--LOGIN EMAIL AND PASSWORD-->
         <div class="card registercard"> <!--CARD START-->
             <div class="card-header"> <!--CARD HEADER START-->
                 <div class="card-title h5">Create Username and Password</div>
@@ -14,9 +14,9 @@
                 </label> <!--ACCORDION ARROW END-->
                 <div class="accordion-body"> <!--ACCORDION BODY START-->
                     <div class="card-body"> <!--CARD BODY START-->
-                        <!--usr_name-->
+                        <!--usr_name
                         <label class="form-label form-inline" for="usr_name">Username:</label>
-                        <input class="form-input form-inline" type="text" id="usr_name" name="usr_name" />
+                        <input class="form-input form-inline" type="text" id="usr_name" name="usr_name" />-->
                         <!--email-->
                         <label class="form-label form-inline" for="email">Login Email for Your Account:</label>
                         <input class="form-input" type="email" id="email" name="email"
