made all ethnicity checkbox inputs have required attr.

--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -164,31 +164,31 @@
                         <!--ethnicity-->
                         <p class="exampletext">Ethnicity (Please select all that apply):</p>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity">
+                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> American Indian and Alaska Native
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity">
+                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> Asian
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity">
+                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> Black or African American
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity">
+                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> Hispanic
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity">
+                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> Native Hawaiian and Other Pacific Islander
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity">
+                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> White or Caucasian
                         </label>
                         <label class="form-checkbox">
-                            <input type="checkbox" id="ethnicity" name="ethnicity">
+                            <input type="checkbox" id="ethnicity" name="ethnicity" required>
                             <i class="form-icon"></i> Some Other Race
                         </label>
                     </div> <!--CARD BODY END-->
